--- a/resume.html
+++ b/resume.html
@@ -32,46 +32,14 @@
             <a href="./games.html">GAMES</a>
             <a href="./resume.html" class="active">RESUME</a>
         </div>
-        <div id="toppad"></div>
         <div id="res">
-            <div id="title">
-                <h2>Professional Summary</h2>
-                Higher-ranking university student, one year away from achieving a bachelor’s degree in computer science. Currently advancing on projects and video games to build a strong portfolio. Looking to launch a career in software development.
-            </div>
-            <div id="title">
-                <h2>Education</h2>
-                <h3>Bachelor's Degree Computer Science(GPA 4.00)</h3>
-                <p>Fort Hays State University</p>
-                <h3>Relevant Coursework:</h3>
-                <p>Front-End Web Development (JavaScript), Web Development (HTML, CSS), Database Design (SQL), Data Structures (Java), Back-End Web Development (APIs, LAMPP (Linux, Apache, MySQL, PHP) stack, Node.js, NPM, CLI, MVC, Express.js, REST, MongoDB, PostgreSQL, MVC), Assembly Language (Assembly), Programming with Python (Python), Object Oriented Programming (OOP)</p>
-                <a href="./img/certs/adegree.pdf" target="_blank"><h3>Associate's Degree Computer Science(GPA 3.71)</h3></a>
-                <p>Laramie County Community College</p>
-                <h3>Relevant Coursework:</h3>
-                <p>Computer Science 1 (Java), Computer Science 2 (C++), Public Speaking (communication), Technical Writing (communication), Accounting 1-3 (finance), Database Applications (Microsoft Access)</p>
-            </div>
+            <img src="./img/certs/resume.png" alt="">
         </div>
-        <div id="res">
-            <div id="title">
-                <h2>Projects</h2>
-                <h3>Space Ace</h3>
-                <p>Top-down space shooter made in GODOT(GDScript)</p>
-            </div>
-            <div id="title">
-                <h2>Coding Languages</h2>
-                <p>Java, C++, HTML, CSS, JavaScript, Python, SQL, Assembly, PHP, GDScript</p>
-            </div>
-            <div id="title">
-                <h2>Certificates</h2>
-                <a href="./img/certs/DDcert.pdf" target="_blank"><h3>Oracle Database Design</h3></a>
-                <a href="./img/certs/SQLcert.pdf" target="_blank"><h3>Oracle Programming: SQL</h3></a>
-            </div>
-            <div id="title">
-                <h2>Skills</h2>
-                <p>Application Programming Interface (API), MongoDB, Mongoose, REST, RESTful API, Expressjs, Nodejs, Node Package Manager (NPM), Model View Controller (MVC), CRUD, Create, Read, Update, Delete, LAMPP, Linux, Apache, MySQL, PostgreSQL, Relational Database, Database Development, Database Design, Command Line Interface (CLI), Scrum Methodology, Agile, JavaFX, Simple and Fast Multimedia Library (SFML), Git, GitHub, Bash, PowerShell (PS), Command Prompt (CMD), Amazon Web Services (AWS), Maven, Subversion (SVN), Eclipse, Microsoft Visual Studio (VS), Visual Studio Code (VSC), Oracle, Software Development Life Cycle (SDLC), JSON, Microsoft Access, Microsoft Excel</p>
-            </div>
-            <a id="dl" href="./img/certs/DustinRileyResume.docx" target="_blank"><h1>Download</h1></a>
+        <div id="dldiv">
+            <form action="./img/certs/DustinRileyResume.pdf" target="_blank">
+                <button id="dl"><h2>Download(pdf)</h2></button>
+            </form>
         </div>
-        <div id="pad"></div>
     </div>
 </body>
 </html>
