--- a/games.html
+++ b/games.html
@@ -36,7 +36,7 @@
         <div id="sections">
             <section>
                 <a href="https://dustinbriley.itch.io/space-ace-v3" target="_blank"><h2>Space Ace v3</h2></a>
-                <iframe frameborder="0" src="https://itch.io/embed-upload/7070228?color=333333" allowfullscreen="" width="" height=""><a href="https://dustinbriley.itch.io/space-ace-v3">Play Space Ace v3 on itch.io</a></iframe>
+                <a href="https://dustinbriley.itch.io/space-ace-v3"><img src="./games/Capture.PNG" alt=""></a>
                 <p>A work in progress in GODOT</p>
             </section>
             <section>
