--- a/assembly.html
+++ b/assembly.html
@@ -42,34 +42,39 @@
                 <th>Preview</th>
             </tr>
             <tr>
-                <td><a href="" target="_blank"></a></td>
-                <td></td>
-                <td><a href="./img/code/" target="_blank"><img src="./img/code/" alt="Preview"></a></td>
+                <td><a href="https://github.com/DustinBRiley/masm1" target="_blank">First Project</a></td>
+                <td>Using memory registers</td>
+                <td><a href="./img/code/asm/1.PNG" target="_blank"><img src="./img/code/asm/1.PNG" alt="Preview"></a></td>
             </tr>
             <tr>
-                <td><a href="" target="_blank"></a></td>
-                <td></td>
-                <td><a href="./img/code/" target="_blank"><img src="./img/code/" alt="Preview"></a></td>
+                <td><a href="https://github.com/DustinBRiley/masm2" target="_blank">Reversing String</a></td>
+                <td>Using offsets and loops</td>
+                <td><a href="./img/code/asm/2.PNG" target="_blank"><img src="./img/code/asm/2.PNG" alt="Preview"></a></td>
             </tr>
             <tr>
-                <td><a href="" target="_blank"></a></td>
-                <td></td>
-                <td><a href="./img/code/" target="_blank"><img src="./img/code/" alt="Preview"></a></td>
+                <td><a href="https://github.com/DustinBRiley/masm3" target="_blank">Creating Random String</a></td>
+                <td>Using Irvine library methods</td>
+                <td><a href="./img/code/asm/3.PNG" target="_blank"><img src="./img/code/asm/3.PNG" alt="Preview"></a></td>
             </tr>
             <tr>
-                <td><a href="" target="_blank"></a></td>
-                <td></td>
-                <td><a href="./img/code/" target="_blank"><img src="./img/code/" alt="Preview"></a></td>
+                <td><a href="https://github.com/DustinBRiley/masm4" target="_blank">Boolean Calculator</a></td>
+                <td>Using booleans</td>
+                <td><a href="./img/code/asm/4.PNG" target="_blank"><img src="./img/code/asm/4.PNG" alt="Preview"></a></td>
             </tr>
             <tr>
-                <td><a href="" target="_blank"></a></td>
-                <td></td>
-                <td><a href="./img/code/" target="_blank"><img src="./img/code/" alt="Preview"></a></td>
+                <td><a href="https://github.com/DustinBRiley/masm5" target="_blank">Bitwise Multiplication</a></td>
+                <td>Using shl and shr</td>
+                <td><a href="./img/code/asm/5.PNG" target="_blank"><img src="./img/code/asm/5.PNG" alt="Preview"></a></td>
             </tr>
             <tr>
-                <td><a href="" target="_blank"></a></td>
-                <td></td>
-                <td><a href="./img/code/" target="_blank"><img src="./img/code/" alt="Preview"></a></td>
+                <td><a href="https://github.com/DustinBRiley/masm6" target="_blank">Greatest Common Divisor</a></td>
+                <td>Using cmp and jumps</td>
+                <td><a href="./img/code/asm/6.PNG" target="_blank"><img src="./img/code/asm/6.PNG" alt="Preview"></a></td>
+            </tr>
+            <tr>
+                <td><a href="https://github.com/DustinBRiley/masm7" target="_blank">Searching String</a></td>
+                <td>Using multiple procs and jumps</td>
+                <td><a href="./img/code/asm/7.PNG" target="_blank"><img src="./img/code/asm/7.PNG" alt="Preview"></a></td>
             </tr>
         </table>
     </div>
