--- a/cpp.html
+++ b/cpp.html
@@ -44,42 +44,42 @@
             <tr>
                 <td><a href="https://github.com/dustinbriley/COSC-2-Cplusplus/blob/main/1.zip" target="_blank">Payroll Assignment</a></td>
                 <td>Assign IDs and pay to employees from file using classes and objects</td>
-                <td><a href="./img/code/C++1.PNG" target="_blank"><img src="./img/code/C1.PNG" alt="Preview"></a></td>
+                <td><a href="./img/code/cpp/C++1.PNG" target="_blank"><img src="./img/code/cpp/C1.PNG" alt="Preview"></a></td>
             </tr>
             <tr>
                 <td><a href="https://github.com/dustinbriley/COSC-2-Cplusplus/blob/main/3.zip" target="_blank">Movie Structures</a></td>
                 <td>Print out movie data using structures</td>
-                <td><a href="./img/code/movies.PNG" target="_blank"><img src="./img/code/movies.PNG" alt="Preview"></a></td>
+                <td><a href="./img/code/cpp/movies.PNG" target="_blank"><img src="./img/code/cpp/movies.PNG" alt="Preview"></a></td>
             </tr>
             <tr>
                 <td><a href="https://github.com/dustinbriley/COSC-2-Cplusplus/blob/main/week4.zip" target="_blank">Structure Search & Sort</a></td>
                 <td>Search and sort through an array of structures</td>
-                <td><a href="./img/code/3.PNG" target="_blank"><img src="./img/code/3.PNG" alt="Preview"></a></td>
+                <td><a href="./img/code/cpp/3.PNG" target="_blank"><img src="./img/code/cpp/3.PNG" alt="Preview"></a></td>
             </tr>
             <tr>
                 <td><a href="https://github.com/dustinbriley/COSC-2-Cplusplus/blob/main/textadventure.zip" target="_blank">Text Adventure</a></td>
                 <td>Text adventure using external library</td>
-                <td><a href="./img/code/textadventure.PNG" target="_blank"><img src="./img/code/textadventure.PNG" alt="Preview"></a></td>
+                <td><a href="./img/code/cpp/textadventure.PNG" target="_blank"><img src="./img/code/cpp/textadventure.PNG" alt="Preview"></a></td>
             </tr>
             <tr>
                 <td><a href="https://github.com/dustinbriley/COSC-2-Cplusplus/blob/main/week7.zip" target="_blank"></a>Pointers</td>
                 <td>Uses pointers as parameters</td>
-                <td><a href="./img/code/pointers.PNG" target="_blank"><img src="./img/code/pointers.PNG" alt="Preview"></a></td>
+                <td><a href="./img/code/cpp/pointers.PNG" target="_blank"><img src="./img/code/cpp/pointers.PNG" alt="Preview"></a></td>
             </tr>
             <tr>
                 <td><a href="https://github.com/dustinbriley/COSC-2-Cplusplus/blob/main/week%208.zip" target="_blank">Arrays and Pointers</a></td>
                 <td>Uses pointers as parameters for an array of test scores</td>
-                <td><a href="./img/code/anp.PNG" target="_blank"><img src="./img/code/anp.PNG" alt="Preview"></a></td>
+                <td><a href="./img/code/cpp/anp.PNG" target="_blank"><img src="./img/code/cpp/anp.PNG" alt="Preview"></a></td>
             </tr>
             <tr>
                 <td><a href="https://github.com/dustinbriley/COSC-2-Cplusplus/blob/main/Desktop-1.zip" target="_blank">Donations</a></td>
                 <td>Use user input, pointers, and arrays to sort donations + input validation</td>
-                <td><a href="./img/code/donations.PNG" target="_blank"><img src="./img/code/donations.PNG" alt="Preview"></a></td>
+                <td><a href="./img/code/cpp/donations.PNG" target="_blank"><img src="./img/code/cpp/donations.PNG" alt="Preview"></a></td>
             </tr>
             <tr>
                 <td><a href="https://github.com/dustinbriley/COSC-2-Cplusplus/blob/main/week9.zip" target="_blank">Movie Statistics</a></td>
                 <td>Prints out statistics from user input about movies</td>
-                <td><a href="./img/code/week9.PNG" target="_blank"><img src="./img/code/week9.PNG" alt="Preview"></a></td>
+                <td><a href="./img/code/cpp/week9.PNG" target="_blank"><img src="./img/code/cpp/week9.PNG" alt="Preview"></a></td>
             </tr>
             <tr>
                 <td><a href="https://github.com/dustinbriley/COSC-2-Cplusplus/blob/main/NumberList.zip" target="_blank">Linked List Class</a></td>
@@ -89,27 +89,27 @@
             <tr>
                 <td><a href="https://github.com/dustinbriley/COSC-2-Cplusplus/blob/main/week%2010.zip" target="_blank">Linked List Printout</a></td>
                 <td>Prints out a linked list using linked list class</td>
-                <td><a href="./img/code/ll.PNG" target="_blank"><img src="./img/code/ll.PNG" alt="Preview"></a></td>
+                <td><a href="./img/code/cpp/ll.PNG" target="_blank"><img src="./img/code/cpp/ll.PNG" alt="Preview"></a></td>
             </tr>
             <tr>
                 <td><a href="https://github.com/dustinbriley/COSC-2-Cplusplus/blob/main/week%2011.zip" target="_blank">Reverse Linked List</a></td>
                 <td>Added reverse method to linked list class</td>
-                <td><a href="./img/code/rl.PNG" target="_blank"><img src="./img/code/rl.PNG" alt="Preview"></a></td>
+                <td><a href="./img/code/cpp/rl.PNG" target="_blank"><img src="./img/code/cpp/rl.PNG" alt="Preview"></a></td>
             </tr>
             <tr>
                 <td><a href="https://github.com/dustinbriley/COSC-2-Cplusplus/blob/main/rainfall.zip" target="_blank">Rainfall</a></td>
                 <td>Given rainfall each month put into a linked list and print out statistics and sort</td>
-                <td><a href="./img/code/rainfall.PNG" target="_blank"><img src="./img/code/rainfall.PNG" alt="Preview"></a></td>
+                <td><a href="./img/code/cpp/rainfall.PNG" target="_blank"><img src="./img/code/cpp/rainfall.PNG" alt="Preview"></a></td>
             </tr>
             <tr>
                 <td><a href="https://github.com/dustinbriley/COSC-2-Cplusplus/blob/main/week%2012.zip" target="_blank">Reverse Text</a></td>
                 <td>Uses a stack to reverse text in a file</td>
-                <td><a href="./img/code/rt.PNG" target="_blank"><img src="./img/code/rt.PNG" alt="Preview"></a></td>
+                <td><a href="./img/code/cpp/rt.PNG" target="_blank"><img src="./img/code/cpp/rt.PNG" alt="Preview"></a></td>
             </tr>
             <tr>
                 <td><a href="https://github.com/dustinbriley/COSC-2-Cplusplus/blob/main/CppApplication_1.zip" target="_blank">Space Ace C++v1</a></td>
                 <td>Space shooter created in C++ using Simple and Fast Multimedia Library (SFML)</td>
-                <td><video width = "100%" controls src="./img/code/ss.mp4">Preview</video></td>
+                <td><video width = "100%" controls src="./img/code/cpp/ss.mp4">Preview</video></td>
             </tr>
         </table>
     </div>
