--- a/php.html
+++ b/php.html
@@ -23,7 +23,6 @@
                     <a href="./htmlcss.html">HTML & CSS</a>
                     <a href="./php.html" class="active">PHP</a>
                     <a href="./python.html">PYTHON</a>
-                    <a href="./sql.html">SQL</a>
                     <a href="./datastructures.html">DATA STRUCTURES</a>
                     <a href="./assembly.html">ASSEMBLY</a>
                 </div>
@@ -43,28 +42,28 @@
             </tr>
             <tr>
                 <td><a href="https://github.com/DustinBRiley/PHP-1" target="_blank">Data Types</a></td>
-                <td></td>
-                <td><a href="./img/code/" target="_blank"><img src="./img/code/" alt="Preview"></a></td>
+                <td>Variables, arrays, and constants</td>
+                <td><a href="./img/code/php/1.PNG" target="_blank"><img src="./img/code/php/1.PNG" alt="Preview"></a></td>
             </tr>
             <tr>
                 <td><a href="https://github.com/DustinBRiley/PHP-2" target="_blank">Conditionals, Loops, Arrays, Functions</a></td>
-                <td></td>
-                <td><a href="./img/code/" target="_blank"><img src="./img/code/" alt="Preview"></a></td>
+                <td>If else, switch, for loops, associative arrays, and parameters</td>
+                <td><a href="./img/code/php/2.PNG" target="_blank"><img src="./img/code/php/2.PNG" alt="Preview"></a></td>
             </tr>
             <tr>
                 <td><a href="https://github.com/DustinBRiley/PHP-3" target="_blank">Classes and Objects</a></td>
-                <td></td>
-                <td><a href="./img/code/" target="_blank"><img src="./img/code/" alt="Preview"></a></td>
+                <td>Creating objects from classes and setting/getting</td>
+                <td><a href="./img/code/php/3.PNG" target="_blank"><img src="./img/code/php/3.PNG" alt="Preview"></a></td>
             </tr>
             <tr>
                 <td><a href="https://github.com/DustinBRiley/PHP-4" target="_blank">PHP Classes, Objects, and JSON</a></td>
-                <td></td>
-                <td><a href="./img/code/" target="_blank"><img src="./img/code/" alt="Preview"></a></td>
+                <td>JSON encoding/decoding objects</td>
+                <td><a href="./img/code/php/4.PNG" target="_blank"><img src="./img/code/php/4.PNG" alt="Preview"></a></td>
             </tr>
             <tr>
-                <td><a href="https://github.com/DustinBRiley/BackendWebDev1Midterm" target="_blank">PHP OOP REST API using PostgreSQL</a></td>
-                <td></td>
-                <td><a href="./img/code/" target="_blank"><img src="./img/code/" alt="Preview"></a></td>
+                <td><a href="https://github.com/DustinBRiley/BackendWebDev1Midterm" target="_blank">PHP API</a></td>
+                <td>PHP OOP REST API using PostgreSQL</td>
+                <td><a href="./img/phpapi.png" target="_blank"><img src="./img/phpapi.png" alt="Preview"></a></td>
             </tr>
         </table>
     </div>
