--- a/python.html
+++ b/python.html
@@ -23,7 +23,6 @@
                     <a href="./htmlcss.html">HTML & CSS</a>
                     <a href="./php.html">PHP</a>
                     <a href="./python.html" class="active">PYTHON</a>
-                    <a href="./sql.html">SQL</a>
                     <a href="./datastructures.html">DATA STRUCTURES</a>
                     <a href="./assembly.html">ASSEMBLY</a>
                 </div>
@@ -44,32 +43,32 @@
             <tr>
                 <td><a href="https://github.com/DustinBRiley/Python-1" target="_blank">Woodchuck</a></td>
                 <td>Type Casting</td>
-                <td><a href="./img/code/" target="_blank"><img src="./img/code/" alt="Preview"></a></td>
+                <td><a href="./img/code/python/1.PNG" target="_blank"><img src="./img/code/python/1.PNG" alt="Preview"></a></td>
             </tr>
             <tr>
                 <td><a href="https://github.com/DustinBRiley/Python-2" target="_blank">Login</a></td>
                 <td>Conditionals, Loops, and Lists</td>
-                <td><a href="./img/code/" target="_blank"><img src="./img/code/" alt="Preview"></a></td>
+                <td><a href="./img/code/python/2.PNG" target="_blank"><img src="./img/code/python/2.PNG" alt="Preview"></a></td>
             </tr>
             <tr>
                 <td><a href="https://github.com/DustinBRiley/Python-3" target="_blank">Cars</a></td>
-                <td>Lists and Dictionaries</td>
-                <td><a href="./img/code/" target="_blank"><img src="./img/code/" alt="Preview"></a></td>
+                <td>Pulling, modifying, sorting, and formating Lists and Dictionaries</td>
+                <td><a href="./img/code/python/3.PNG" target="_blank"><img src="./img/code/python/3.PNG" alt="Preview"></a></td>
             </tr>
             <tr>
                 <td><a href="https://github.com/DustinBRiley/Python-4" target="_blank">Story</a></td>
                 <td>Reading, Writing, and Editing files</td>
-                <td><a href="./img/code/" target="_blank"><img src="./img/code/" alt="Preview"></a></td>
+                <td><a href="./img/code/python/4.PNG" target="_blank"><img src="./img/code/python/4.PNG" alt="Preview"></a></td>
             </tr>
             <tr>
                 <td><a href="https://github.com/DustinBRiley/Unicode-Memory" target="_blank">Memory</a></td>
                 <td>Unicode Memory Game (with bruteforce protection)</td>
-                <td><a href="./img/code/" target="_blank"><img src="./img/code/" alt="Preview"></a></td>
+                <td><a href="./img/code/python/5.PNG" target="_blank"><img src="./img/code/python/5.PNG" alt="Preview"></a></td>
             </tr>
             <tr>
                 <td><a href="https://github.com/DustinBRiley/Tkinter-Memory" target="_blank">Memory</a></td>
                 <td>Tkinter Memory Game (with bruteforce protection)</td>
-                <td><a href="./img/code/" target="_blank"><img src="./img/code/" alt="Preview"></a></td>
+                <td><a href="./games/Memory.PNG" target="_blank"><img src="./games/Memory.PNG" alt="Preview"></a></td>
             </tr>
         </table>
     </div>
