fixed videos to button in portrait mode

--- a/cpp.html
+++ b/cpp.html
@@ -108,7 +108,11 @@
             <tr>
                 <td><a href="https://github.com/dustinbriley/COSC-2-Cplusplus/blob/main/CppApplication_1.zip" target="_blank">Space Ace C++v1</a></td>
                 <td>Space shooter created in C++ using Simple and Fast Multimedia Library (SFML)</td>
-                <td><video width = "100%" controls src="./img/code/cpp/ss.mp4">Preview</video></td>
+                <td><div id="vid"><video width = "100%" controls src="./img/code/cpp/ss.mp4">Preview</video></div>
+                    <div id="vidbut"><form action="./img/code/cpp/ss.mp4" target="_blank">
+                        <button>video</button>
+                    </form></div>
+                </td>
             </tr>
         </table>
     </div>
