--- a/java.html
+++ b/java.html
@@ -297,7 +297,11 @@
             <tr>
                 <td><a href="https://github.com/dustinbriley/COSC-1/blob/main/src.zip" target="_blank">Avoidance 2</a></td>
                 <td>Added scoreboard, speed, and sound effects</td>
-                <td><video width = "100%" controls src="./img/code/java/avoid2.mp4">Preview</video></td>
+                <td><div id="vid"><video width = "100%" controls src="./img/code/java/avoid2.mp4">Preview</video></div>
+                    <div id="vidbut"><form action="./img/code/java/avoid2.mp4" target="_blank">
+                        <button>video</button>
+                    </form></div>
+                </td>
             </tr>
             <tr>
                 <td><a href="https://github.com/dustinbriley/COSC-1/blob/main/src-1.zip" target="_blank">Card Deck</a></td>
@@ -312,12 +316,20 @@
             <tr>
                 <td><a href="https://github.com/dustinbriley/COSC-1/blob/main/src-4.zip" target="_blank">Space Acev1</a></td>
                 <td>Topdown scrolling space shooter</td>
-                <td><video width = "100%" controls src="./img/code/java/ssv1.mp4">Preview</video></td>
+                <td><div id="vid"><video width = "100%" controls src="./img/code/java/ssv1.mp4">Preview</video></div>
+                    <div id="vidbut"><form action="./img/code/java/ssv1.mp4" target="_blank">
+                        <button>video</button>
+                    </form></div>
+                </td>
             </tr>
             <tr>
                 <td><a href="https://github.com/dustinbriley/COSC-1/blob/main/src-5%20(1).zip" target="_blank">Space Acev2</a></td>
                 <td>Added images, music, HUD, and powerups</td>
-                <td><video width = "100%" controls src="./img/code/java/ssv2.mp4">Preview</video></td>
+                <td><div id="vid"><video width = "100%" controls src="./img/code/java/ssv2.mp4">Preview</video></div>
+                    <div id="vidbut"><form action="./img/code/java/ssv2.mp4" target="_blank">
+                        <button>video</button>
+                    </form></div>
+                </td>
         </table>
     </div>
 </body>
