--- a/resume.html
+++ b/resume.html
@@ -35,7 +35,7 @@
             <img src="./img/certs/resume.png" alt="">
         </div>
         <div id="dldiv">
-            <form action="./img/certs/DustinRileyResume.pdf" target="_blank">
+            <form action="./img/certs/DustinRileyResume.docx" target="_blank">
                 <button id="dl"><h2>Download(pdf)</h2></button>
             </form>
         </div>
